@@ -712,6 +712,7 @@ balsa_message_init(BalsaMessage * balsa_message)
     gtk_gesture_single_set_button(GTK_GESTURE_SINGLE(gesture), 0);
     g_signal_connect(gesture, "pressed",
                      G_CALLBACK(tree_button_press_cb), balsa_message);
+    gtk_event_controller_set_propagation_phase(GTK_EVENT_CONTROLLER(gesture), GTK_PHASE_CAPTURE);
 
     g_signal_connect(balsa_message->treeview, "popup-menu",
                      G_CALLBACK(tree_menu_popup_key_cb), balsa_message);
@@ -992,8 +993,6 @@ tree_button_press_cb(GtkGestureMultiPress *multi_press_gesture,
     if (!gdk_event_triggers_context_menu(event) ||
         gdk_event_get_window(event) != gtk_tree_view_get_bin_window(tree_view))
         return;
-
-    gtk_gesture_set_sequence_state(gesture, sequence, GTK_EVENT_SEQUENCE_CLAIMED);
 
     gtk_tree_view_convert_widget_to_bin_window_coords(tree_view, (gint) x, (gint) y,
                                                       &bx, &by);
